--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ nav {
 /* Setting section parameters by 1/3 */
 #product-section {
   width: 100%;
+  min-height: 33vh;
   height: 33%;
   padding-bottom: 40px;
   padding-top: 40px;
@@ -137,6 +138,7 @@ nav {
 /* Setting section parameters by 1/3 */
 #process-section {
   width: 100%;
+  min-height: 33vh;
   height: 33%;
   padding-bottom: 40px;
   padding-top: 20px;
@@ -146,6 +148,7 @@ nav {
 /* Setting section parameters by 1/3 */
 #contact-section {
   width: 100%;
+  min-height: 33vh;
   height: 33%;
   padding-bottom: 40px;
   padding-top: 40px;
@@ -197,4 +200,26 @@ nav {
 .submit-layout {
   height: 35px;
   width: 70px;
+}
+
+#designed-section {
+  color: white;
+  text-align: center;
+  
+}
+
+.contact-links {
+  height: auto;
+  width: 100%;
+}
+
+.contact-img {
+  height: 75px;
+  width: 75px;
+  padding: 25px;
+}
+
+#git-logo {
+  height: 75px;
+  width: 125px;
 }
