--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 /*Overlays rgba on background img */
 body {
   background-blend-mode: multiply;
@@ -7,6 +11,7 @@ body {
   background-size: cover;
   background-position: center center;
   font-family: Georgia;
+  position: relative;
 }
 
 /* NAV --------------------------------------------- */
